--- a/downstream/modules/platform/con-gs-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-automation-content.adoc
@@ -48,3 +48,5 @@ With roles, you can group together a broader range of existing automation conten
 This includes playbooks, configuration files, templates, tasks, and handlers to create customized automation content that can be reused and shared with others. 
 
 You can also make roles configurable by exposing variables that users can set when calling the role, allowing them to configure their system according to their organization's requirements.
+
+//For more information, see xref:con-gs-ansible-roles_{context}[Ansible roles].
