--- a/downstream/modules/platform/proc-gs-logging-in.adoc
+++ b/downstream/modules/platform/proc-gs-logging-in.adoc
@@ -18,7 +18,9 @@ After your first login, you are prompted to add your subscription manifest.
 
 . You can select between uploading a copy of your subscription manifest or entering your login credentials to find the subscription associated with your profile:
 .. To upload a subscription manifest, drag the file to the field beneath *Red Hat subscription manifest* or browse for the file on your local machine.
-.. To find your subscription, click the tab labeled *Username / password* and enter your credentials. Your subscription will appear in the list menu labeled Subscription. Select your subscription.
+.. To find your subscription, click the tab labeled *Username / password* and enter your credentials. 
+Your subscription appears in the list menu labeled *Subscription*. 
+Select your subscription.
 . After you have added your subscription, click btn:[Next].
 . On the screen labeled *Analytics*, check the box if you want to share data with Red Hat and click btn:[Next].
 . Check the box indicating that you agree to the *End User License Agreement*. 
