--- a/downstream/modules/platform/con-gs-manage-RBAC.adoc
+++ b/downstream/modules/platform/con-gs-manage-RBAC.adoc
@@ -1,6 +1,6 @@
 [id="con-gs-manage-RBAC"]
 
-= Managing access with role-based access control
+= Managing user access with role-based access control
 
 Role-based access control (RBAC) restricts user access based on their role within an organization. 
 The roles in RBAC refer to the levels of access that users have to the network. 
