--- a/downstream/modules/platform/proc-gw-configure-auth-details.adoc
+++ b/downstream/modules/platform/proc-gw-configure-auth-details.adoc
@@ -4,7 +4,8 @@
 
 = Configure Authentication details
 
-Different authenticator plugins require different types of information, see the  respective sections in Authenticator plugins for the required details.
+Different authenticator plugins require different types of information. See the respective sections in xref:gw-config-authentication-type_gw-auth-type[Configuring an authentication type] for the required details.
+
 For all authentication types you can enter a *Name*, *Additional Authenticator Fields* and *Create Objects*. 
 
 .Procedure
@@ -26,9 +27,9 @@ Values defined in this field override the dedicated fields provided in the UI. F
 . Enable or disable *Create Object* to specify whether the authenticator should create teams and organizations in the system when a user logs in.
 +
 Enabled:: Teams and organizations defined in the authenticator maps are created and the users added to them.
-Disabled:: Organizations and teams defined in the authenticator maps will not be created automatically in the system. However,  if they already exist (i.e. created by a superuser), users who trigger the maps are granted access to them.
+Disabled:: Organizations and teams defined in the authenticator maps will not be created automatically in the system. However, if they already exist (i.e. created by a superuser), users who trigger the maps are granted access to them.
 +
-. Enable or disable *Enabled* to specify if the authenticator should be enabled or disabled. If enabled, users are able to login from the authenticator. If disabled, users will not be allowed to login from the authenticator
+. Enable or disable *Enabled* to specify if the authenticator should be enabled or disabled. If enabled, users are able to login from the authenticator. If disabled, users will not be allowed to login from the authenticator.
 . Enable or disable *Remove Users* if enabled any access previously granted to a user is removed when they authenticate from this source. If disabled, permissions are only added or removed from the user based on the results of this authenticator's authenticator mappings.
 +
 For example, assume a user has been granted the `is_superuser` permission in the system. And that user will log into an authenticator whose maps will not formulate an opinion as to whether or not the user should be a superuser.
