AAP-29215 - changed procedure headings to gerunds

--- a/downstream/modules/platform/proc-gw-configure-auth-details.adoc
+++ b/downstream/modules/platform/proc-gw-configure-auth-details.adoc
@@ -2,7 +2,7 @@
 
 [id="gw-configure-auth-details_{context}"]
 
-= Configure Authentication details
+= Configuring authentication details
 
 Different authenticator plugins require different types of information. See the respective sections in xref:gw-config-authentication-type_gw-auth-type[Configuring an authentication type] for the required details.
 
