--- a/downstream/modules/platform/proc-gw-define-rules-triggers.adoc
+++ b/downstream/modules/platform/proc-gw-define-rules-triggers.adoc
@@ -2,7 +2,7 @@
 
 [id="gw-define-rules-triggers_{context}"]
 
-= Define authentication mapping rules and triggers
+= Defining authentication mapping rules and triggers
 
 {PlatformNameShort} supports the following rule types:
 
