--- a/downstream/modules/platform/proc-gw-review-auth-settings.adoc
+++ b/downstream/modules/platform/proc-gw-review-auth-settings.adoc
@@ -2,6 +2,8 @@
 
 [id="gw-review-auth-settings_{context}"]
 
+= Reviewing the authentication settings
+
 After you have defined the authentication details, configured the authentication maps, and specified the mapping order precedence, you can review and verify, or modify the settings before creating the authenticator. 
 
 .Procedure
