--- a/downstream/modules/platform/proc-gw-select-auth-type.adoc
+++ b/downstream/modules/platform/proc-gw-select-auth-type.adoc
@@ -2,7 +2,7 @@
 
 [id="gw-select-auth-type_{context}"]
 
-= Selecting an Authentication type
+= Selecting an authentication type
 
 On the first screen of the wizard you can select the type of authenticator plugin you want to configure. 
 
