AAP-29215 - fix cross reference formatting

--- a/downstream/modules/platform/proc-gw-select-auth-type.adoc
+++ b/downstream/modules/platform/proc-gw-select-auth-type.adoc
@@ -13,6 +13,6 @@ On the first screen of the wizard you can select the type of authenticator plugi
 +
 The *Create Authentication* wizard is displayed, where you can follow the prompts to configure your preferred authentication method.
 +
-. Select the authenticator type from the *Authentication type* list. See xref:gw-config-authentication-type_gw-auth-type for the complete list of authentication plugins available.
+. Select the authenticator type from the *Authentication type* list. See xref:gw-config-authentication-type_gw-auth-type[Configuring an authentication type] for the complete list of authentication plugins available.
 +
 . Click btn:[Next] to xref:gw-configure-auth-details[Configure authentication details].
