AAP-29215 - implement peer review and other fixes from PR1725 (#1745)
* AAP-29215 - implement peer review and other fixes from PR1725

* AAP-29215 - changed procedure headings to gerunds

* AAP-29215 - fix cross reference formatting

* AAP-29215 - include peer review corrections

--- a/downstream/modules/platform/proc-gw-select-auth-type.adoc
+++ b/downstream/modules/platform/proc-gw-select-auth-type.adoc
@@ -2,7 +2,7 @@
 
 [id="gw-select-auth-type_{context}"]
 
-= Select an Authentication type
+= Selecting an authentication type
 
 On the first screen of the wizard you can select the type of authenticator plugin you want to configure. 
 
@@ -13,23 +13,6 @@ On the first screen of the wizard you can select the type of authenticator plugi
 +
 The *Create Authentication* wizard is displayed, where you can follow the prompts to configure your preferred authentication method.
 +
-. Select the authenticator type from the *Authentication type* list. Options include:
-+
-//ddacosta - TBD links to the sections for each config below.
-* Local
-* LDAP 
-* SAML 
-* TACACS+ 
-* Radius 
-* Azure 
-* Google OAuth
-* Generic OIDC
-* Keycloak
-* GitHub 
-* GitHub organization 
-* GitHub team 
-* GitHub enterprise
-* GitHub enterprise organization
-* GitHub enterprise team
+. Select the authenticator type from the *Authentication type* list. See xref:gw-config-authentication-type_gw-auth-type[Configuring an authentication type] for the complete list of authentication plugins available.
 +
 . Click btn:[Next] to xref:gw-configure-auth-details[Configure authentication details].
