Document the requirement that upgrade from 2.4 containerized TP is not supported
Document the requirement that upgrade from 2.4 containerized TP is not supported

Created a snippet for this text /snippets/container-upgrades.adoc

https://issues.redhat.com/browse/AAP-28343

--- a/downstream/assemblies/platform/assembly-aap-containerized-installation.adoc
+++ b/downstream/assemblies/platform/assembly-aap-containerized-installation.adoc
@@ -19,6 +19,11 @@ endif::[]
 
 This guide helps you to understand the installation requirements and processes behind the containerized version of {PlatformNameShort}. 
 
+[NOTE]
+====
+include::snippets/container-upgrades.adoc[]
+====
+
 .Prerequisites
 
 * A RHEL 9.2 based host. Minimal operating system (OS) base install is recommended.
