--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -1,14 +1,9 @@
 [id="con-saas-intro"]
 = Introduction 
-{SaaSonAWS} links your {AWS} (AWS) offering to your Red{nbsp}Hat account which enables access to {PlatformNameShort}. 
-When you subscribe to {SaaSonAWSShort}, Red{nbsp}Hat deploys and configures an  {PlatformNameShort} environment for you. 
+The Red{nbsp}Hat Ansible Automation Platform Service on Amazon Web Services (AWS) provides you with an {PlatformNameShort} deployment purchased through AWS Marketplace. 
+Red{nbsp}Hat configures and provisions the {PlatformNameShort} environment. 
+The Red{nbsp}Hat team manages the uptime and lifecycle of {PlatformNameShort} applications, while providing the flexibility and security of automation.
 
-From here you can access the control plane which allows you to run and manage your automation. You can run automation through mesh ingress or self-managed hop nodes. 
-You can connect execution nodes through an egress model from your environment using mesh ingress.
-Alternatively, mesh ingress sets up hop nodes on the controller and then you can peer execution nodes to them.
+While the control plane is managed by the Red{nbsp}Hat team, the execution plane is distributed to your domains through the automation mesh hop node and execution nodes.
 
-.Figure 1. Egress model
-image:Egress.png[Egress model] 
-
-.Figure 1.2 Ingress vs egress
-image:Ingress+egress.png[Ingress vs egress model] 
+This service utilizes the enhancements and features available in {PlatformNameShort}.
