--- a/stories/assembly-saas-planning.adoc
+++ b/stories/assembly-saas-planning.adoc
@@ -7,6 +7,9 @@ Before setting up your {SaaSonAWS} review the following sections for a comprehen
 
 
 include::topics/con-saas-intro.adoc[leveloffset=+1]
+include::topics/con-saas-automation.adoc[leveloffset=+1]
+include::topics/ref-saas-egress-model.adoc[leveloffset=+2]
+include::topics/ref-saas-mesh-ingress-model.adoc[leveloffset=+2]
 include::topics/ref-saas-default-configs.adoc[leveloffset=+1]
 include::topics/ref-saas-planning-configs.adoc[leveloffset=+1]
 
