aap-29354 Add Tech Preview notice to Devtools doc

--- a/downstream/titles/develop-automation-content/master.adoc
+++ b/downstream/titles/develop-automation-content/master.adoc
@@ -16,6 +16,12 @@ This document has been updated to include information for the latest release of 
 
 include::{Boilerplate}[]
 
+[IMPORTANT]
+==== 
+{AAPRHDH} is a Technology Preview feature only.
+include::snippets/technology-preview.adoc[]
+==== 
+
 include::devtools/assembly-devtools-intro.adoc[leveloffset=+1]
 include::devtools/assembly-developer-workflow.adoc[leveloffset=+1]
 include::devtools/assembly-devtools-install.adoc[leveloffset=+1]
