Updating UI steps after demo

--- a/stories/topics/proc-saas-set-up-private.adoc
+++ b/stories/topics/proc-saas-set-up-private.adoc
@@ -8,16 +8,21 @@ The offer has a set expiration date, if you do not accept the private offer by t
 . A Red{nbsp}Hat seller issues you a purchase order and provides it to you by email.
 ** For manual steps see link:https://docs.aws.amazon.com/marketplace/latest/buyerguide/buyer-private-offers.html#buyer-private-offers-subscribing[Viewing and subscribing to a private offer] page on the AWS Marketplace
 . Click the link in the email to accept the terms.
+. Log in to your AWS account.
+. Navigate to the AWS Marketplace.
+. Go to the *Private Offers* page. 
+. CLick the URL under the *Offer ID* column. This redirects you to the *Offer Selection* page. 
 . Click btn:[Create contract].
-. Click btn:[Click here to set up your account]. This redirects you to {RHSSO} where you need to:
+. Click btn:[Click Set up your account]. This redirects you to {RHSSO} where you need to:
 .. Create or sign into your Red{nbsp}Hat account.
-.. Link your AWS account to the Red{nbsp}Hat account.
+.. Connect your AWS account to the Red{nbsp}Hat account.
+... If this is your first time connecting your accounts you will need to accept the terms and conditions and click btn:[Connect accounts].
 . This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
 . Enter your AWS account ID.
 +
 This account ID must be the account ID that purchased the offer from the AWS marketplace. The system will not recognize associated or nested accounts.
 . Once your AWS ID is validated click btn:[Next].
-. Select your desired region.
+. Select your desired region and click btn:[Next].
 . Click btn:[Provision].
 
 This redirects you to the *Instances* page which displays all the details of the instance you created. From here you can confirm if your instance is *Assigned* or still in a *Pending* state.
