AAP-29069 Create Operator section of Getting Started guide

--- a/downstream/modules/platform/con-gs-manage-collections.adoc
+++ b/downstream/modules/platform/con-gs-manage-collections.adoc
@@ -4,9 +4,9 @@
 
 As a platform operator, you can use namespaces in {HubName} to curate and manage collections for the following purposes:
 
-* Create groups with permissions to curate namespaces and upload collections to private {HubName}.
+* Create groups with permissions to curate namespaces and upload collections to {PrivateHubName}.
 * Add information and resources to the namespace to help end users of the collection in their automation tasks.
 * Upload collections to the namespace.
 * Review the namespace import logs to decide the success or failure of uploading the collection and its current approval status.
 
-For more information about collections, see ADD 2.5 LINK[Managing collections in automation hub].
+For more information about collections, see _link:{LinkHubManagingContent}_.
