--- a/downstream/modules/platform/proc-verify-aap-installation.adoc
+++ b/downstream/modules/platform/proc-verify-aap-installation.adoc
@@ -11,4 +11,4 @@ If the installation fails and you are a customer who has purchased a valid licen
 ====
 
 .Additional resources
-See Link:{LinkGettingStarted} for post installation instructions.
+See link:{LinkGettingStarted} for post installation instructions.
