Adding final content to admin section

--- a/downstream/modules/platform/con-gs-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-automation-content.adoc
@@ -39,7 +39,7 @@ Ansible playbooks can declare configurations, orchestrate steps of any manually 
 
 .Additional resources
 
-See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/html-single/getting_started_with_playbooks/index[Getting started with Ansible Playbooks] for more information. 
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/getting_started_with_playbooks/index[Getting started with Ansible Playbooks]. 
 
 == Ansible roles
 
@@ -49,4 +49,6 @@ This includes playbooks, configuration files, templates, tasks, and handlers to 
 
 You can also make roles configurable by exposing variables that users can set when calling the role, allowing them to configure their system according to their organization's requirements.
 
-//For more information, see xref:con-gs-ansible-roles_{context}[Ansible roles].
+.Additional resources
+
+For more information, see xref:con-gs-ansible-roles_assembly-gs-auto-dev[Bundle content with Ansible roles].
