--- a/downstream/assemblies/platform/assembly-gs-platform-admin.adoc
+++ b/downstream/assemblies/platform/assembly-gs-platform-admin.adoc
@@ -18,4 +18,4 @@ include::platform/con-gs-manage-RBAC.adoc[leveloffset=+1]
 include::platform/proc-controller-create-organization.adoc[leveloffset=+1]
 include::platform/proc-controller-creating-a-team.adoc[leveloffset=+1]
 include::platform/proc-gs-platform-admin-create-user.adoc[leveloffset=+1]
-//include::platform/proc-controller-github-settings.adoc[leveloffset=+1]
+include::platform/proc-gs-social-auth-github.adoc[leveloffset=+1]
