--- a/downstream/modules/platform/con-gw-authenticator-map-examples.adoc
+++ b/downstream/modules/platform/con-gw-authenticator-map-examples.adoc
@@ -8,7 +8,7 @@
 * Add this user to a team if they have the group `cn=Administrators,ou=AAP,ou=example,o=com` or `cn=Operators,ou=AAP,ou=example,o=com`. 
 * Never allow access to the system if the user has an attribute called `disabled` with a value of `True`, `Yes` or `Until Further Notice`.
 
-Since maps are executed in order it’s possible to create exceptions. Expanding on the previous example for “Never allow access to the system if the user has an attribute called disabled with a value of `True`, `Yes` or `Until Further Notice`.
+Since maps are executed in order, it is possible to create exceptions. Expanding on the previous example for “Never allow access to the system if the user has an attribute called disabled with a value of `True`, `Yes` or `Until Further Notice`.
 
 You can add another rule with a higher order, such as, “Allow access to the system for a `disabled` user if they are in the group `Emergency Contacts`.”
 
