--- a/downstream/modules/platform/con-gw-authenticator-map-examples.adoc
+++ b/downstream/modules/platform/con-gw-authenticator-map-examples.adoc
@@ -12,4 +12,4 @@ Since maps are executed in order, it is possible to create exceptions. Expanding
 
 You can add another rule with a higher order, such as, “Allow access to the system for a `disabled` user if they are in the group `Emergency Contacts`.”
 
-The first rule prevents the disabled user from accessing the system but the second rule alters that decision to grant access to the system for the disabled user if they are in the `Emergency Contacts` group.
+The first rule prevents the disabled user from accessing the system, but the second rule alters that decision to grant access to the system for the disabled user if they are in the `Emergency Contacts` group.
