--- a/downstream/modules/platform/con-gw-authenticator-map-triggers.adoc
+++ b/downstream/modules/platform/con-gw-authenticator-map-triggers.adoc
@@ -8,5 +8,5 @@ Each map has a trigger that defines when the map should be evaluated as true. Tr
 
 Always:: The trigger should always be invoked.
 Never:: The trigger should never be invoked.
-Group:: The trigger should be invoked based on a user having, not having or having multiple groups in the source system.
+Group:: The trigger should be invoked based on a user having, not having, or having multiple groups in the source system.
 Attribute:: The trigger should be invoked based on a user having some combination of attributes from the source system whose value might match, container, end with, etc. some value.
