--- a/downstream/modules/platform/ref-controller-organization-mapping.adoc
+++ b/downstream/modules/platform/ref-controller-organization-mapping.adoc
@@ -6,7 +6,7 @@
 
 You can control which users are placed into which {PlatformNameShort} organizations based on attributes like their username and email address or based on groups provided from an authenticator. 
 
-When organization mapping is positively evaluated, a specified organization is created, if it doesn’t exist if the authenticator tied to the map is allowed to create objects.
+When organization mapping is positively evaluated, a specified organization is created, if it does not exist if the authenticator tied to the map is allowed to create objects.
 
 .Procedure
 
