AAP-25298: Created docs for one-click trials

--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -12,10 +12,25 @@
 
 == Accessing {LightspeedFullName}
 
-To use {LightspeedFullName}, your organization must have:
+* *{LightspeedShortName} cloud service*
++
+To use the {LightspeedShortName} cloud service, you must meet *one* of the following requirements:
 
-* A trial or paid subscription to {PlatformNameShort} 
-* A trial or paid subscription to {ibmwatsonxcodeassistant}
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
++
+[NOTE]
+====
+A {LightspeedShortName} trial account does not require an {ibmwatsonxcodeassistant} subscription.
+====
+
+* *{LightspeedShortName} on-premise deployment*
++
+To use an on-premise deployment of {LightspeedShortName}, your organization must have the following subscriptions:
+
+** A trial or paid subscription to the {PlatformName} 
+
+** An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
 
 == Benefits of using {LightspeedShortName}
 {LightspeedFullName} offers the following benefits: 
