--- a/lightspeed/modules/con_lightspeed-process.adoc
+++ b/lightspeed/modules/con_lightspeed-process.adoc
@@ -6,18 +6,26 @@
 
 == Prerequisites
 
-To use {LightspeedShortName} cloud service, ensure that you have the following components:
+To use the {LightspeedShortName} cloud service, you must meet *one* of the following requirements:
 
-* Trial or paid subscription to {PlatformNameShort}
-* Trial or paid subscription to {ibmwatsonxcodeassistant}
-* VS Code version 1.70.1 or later
-* The Ansible extension for VS Code version 2.8 or later
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
++
+[NOTE]
+====
+A {LightspeedShortName} trial account does not require an {ibmwatsonxcodeassistant} subscription.
+====
 
 To use an on-premise deployment of {LightspeedShortName}, your organization must have the following subscriptions:
 
 * A trial or paid subscription to {PlatformName} 
 
 * An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
+
+You must also install the following components:
+
+* VS Code version 1.70.1 or later
+* The Ansible extension for VS Code version 2.8 or later
 
 == Connectivity requirements
 To generate code recommendations, the Ansible Lightspeed service in Visual Studio (VS) Code editor requires access to the following outbound domain:
