--- a/lightspeed/modules/con_telemetry-data-collection-notice.adoc
+++ b/lightspeed/modules/con_telemetry-data-collection-notice.adoc
@@ -15,7 +15,7 @@ Tools within the software monitor various metrics and this information is transm
 * User sentiment feedback
 
 == Personal Data
-Red Hat does not intend to collect personal information. If Red Hat discovers that personal information has been inadvertently received, Red Hat will delete such information. To the extent that any telemetry data constitutes personal data, refer the link:https://www.redhat.com/en/about/privacy-policy[Red Hat Privacy Statement] for more information about Red Hat's privacy practices. 
+Red Hat does not intend to collect personal information. If Red Hat discovers that personal information has been inadvertently received, Red Hat will delete such information. To the extent that any telemetry data constitutes personal data, refer to the link:https://www.redhat.com/en/about/privacy-policy[Red Hat Privacy Statement] for more information about Red Hat's privacy practices. 
  
 === Retention
 Red Hat retains and stores telemetry data only for as long as it's needed for the purposes described above or as otherwise required or permitted by law.
