--- a/lightspeed/assemblies/assembly_setting-up-lightspeed.adoc
+++ b/lightspeed/assemblies/assembly_setting-up-lightspeed.adoc
@@ -10,7 +10,7 @@ ifdef::context[:parent-context: {context}]
 
 [id="set-up-lightspeed_{context}"]
 
-= Setting up {LightspeedShortName}
+= Setting up {LightspeedShortName} for your organization
 
 :context: set-up-lightspeed
 
