--- a/lightspeed/modules/proc_single-task-recs.adoc
+++ b/lightspeed/modules/proc_single-task-recs.adoc
@@ -8,7 +8,11 @@ You can request code recommendations for a single task by entering natural langu
 
 .Prerequisites
 
-* You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
+* You meet *one* of the following requirements:
+
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+
 * You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
 .Procedure
