--- a/lightspeed/modules/proc_troubleshooting-vscode.adoc
+++ b/lightspeed/modules/proc_troubleshooting-vscode.adoc
@@ -12,7 +12,11 @@ The following scenarios are possible:
 To resolve this error, ensure that:
 
 ** Your organization administrator has configured {LightspeedShortName} for your organization. 
-** You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
+** You meet *one* of the following requirements:
+
+*** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+*** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+
 * You have not configured the required Ansible VS code extension settings.
 ** To resolve this error, ensure that you have enabled the *Lightspeed:Enabled* and menu:Lightspeed[Suggestions:Enabled] settings. For more information, see xref:configure-vscode-extension_configuring-with-code-assistant[Configure the Ansible VS Code extension].
 
