--- a/lightspeed/titles/lightspeed-user-guide/master.adoc
+++ b/lightspeed/titles/lightspeed-user-guide/master.adoc
@@ -14,6 +14,7 @@ include::attributes/attributes.adoc[]
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 include::assemblies/assembly-lightspeed-intro.adoc[leveloffset=+1]
 include::assemblies/assembly_logging-in-lightspeed-admin-portal.adoc[leveloffset=+1]
+include::assemblies/assembly_starting-lightspeed-trial.adoc[leveloffset=+1]
 include::assemblies/assembly_setting-up-lightspeed.adoc[leveloffset=+1]
 include::assemblies/assembly_logging-in-out-portal.adoc[leveloffset=+1]
 include::assemblies/assembly_configuring-vscode-extension.adoc[leveloffset=+1]
