AAP-29499: Added on-prem troubleshooting cross-reference and removed on-prem monitoring content

--- a/lightspeed/modules/proc_configure-vscode-extension-onpremise-deployment.adoc
+++ b/lightspeed/modules/proc_configure-vscode-extension-onpremise-deployment.adoc
@@ -22,5 +22,9 @@ To access the on-premise deployment of {LightspeedShortName}, all Ansible users 
 +
 After configuring Ansible VS Code extension to connect to {LightspeedShortName} on-premise deployment, you must xref:login-vscode-extension_configuring-with-code-assistant[log in to Ansible Lightspeed through the Ansible VS Code extension].
 
+[role="_additional-resources"]
+.Additional resources
+* xref:troubleshooting-lightspeed-onpremise-config_troubleshooting-lightspeed[Troubleshooting {LightspeedShortName} on-premise deployment errors]
+
 
 
