--- a/lightspeed/modules/proc_create-oauth-app.adoc
+++ b/lightspeed/modules/proc_create-oauth-app.adoc
@@ -37,3 +37,7 @@ The following image is an example of the generated client ID and client secret:
 +
 [.thumb]
 image::popup-window-client-ID-secret.png[{Example of a generated client ID and client secret]
+
+[role="_additional-resources"]
+.Additional resources
+* xref:troubleshooting-lightspeed-onpremise-config_troubleshooting-lightspeed[Troubleshooting {LightspeedShortName} on-premise deployment errors]
