--- a/lightspeed/modules/proc_update-connection-secrets.adoc
+++ b/lightspeed/modules/proc_update-connection-secrets.adoc
@@ -28,4 +28,8 @@ image:update-connection-secrets.png[Setting to update the connection secrets])
 +
 The new AnsibleLightspeed Pods are created. After the new pods are running successfully, the old AnsibleLightspeed Pods are terminated.
 
+[role="_additional-resources"]
+.Additional resources
+* xref:troubleshooting-lightspeed-onpremise-config_troubleshooting-lightspeed[Troubleshooting {LightspeedShortName} on-premise deployment errors]
+
 
