--- a/lightspeed/modules/proc_update-redirect-uri.adoc
+++ b/lightspeed/modules/proc_update-redirect-uri.adoc
@@ -69,3 +69,7 @@ If you are running multiple instances of {LightspeedShortName} application with 
 ====
 
 . Apply the revised YAML. This task restarts the automation controller pods.
+
+[role="_additional-resources"]
+.Additional resources
+* xref:troubleshooting-lightspeed-onpremise-config_troubleshooting-lightspeed[Troubleshooting {LightspeedShortName} on-premise deployment errors]
