--- a/lightspeed/modules/proc_troubleshooting-lightspeed-onpremise-config.adoc
+++ b/lightspeed/modules/proc_troubleshooting-lightspeed-onpremise-config.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 
 [id="troubleshooting-lightspeed-onpremise-config_{context}"]
-= Troubleshooting on-premise deployment configuration errors
+= Troubleshooting {LightspeedShortName} on-premise deployment errors
 
 == Cannot log in to the Ansible Lightspeed portal
 After you configure an {LightspeedShortName} on-premise deployment and try to log in to the Ansible Lightspeed portal, the log-in attempt fails. The following scenarios are possible:
