--- a/lightspeed/modules/proc_create-connection-secrets.adoc
+++ b/lightspeed/modules/proc_create-connection-secrets.adoc
@@ -139,4 +139,8 @@ secretGenerator:
       disableNameSuffixHash: true
 ....
 
-After you create the bundle secret, you must select the secret when you  xref:create-lightspeed-instance_configuring-lightspeed-onpremise[create and deploy an {LightspeedshortName} instance].
+After you create the bundle secret, you must select the secret when you xref:create-lightspeed-instance_configuring-lightspeed-onpremise[create and deploy an {LightspeedshortName} instance].
+
+[role="_additional-resources"]
+.Additional resources
+* xref:troubleshooting-lightspeed-onpremise-config_troubleshooting-lightspeed[Troubleshooting {LightspeedShortName} on-premise deployment errors]
