AAP-29213 - Convert authentication type content

--- a/downstream/modules/platform/proc-controller-set-up-radius.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-radius.adoc
@@ -1,14 +1,22 @@
 [id="controller-set-up-radius"]
 
-= RADIUS authentication
+= Configuring RADIUS authentication
 
-You can configure {ControllerName} to centrally use RADIUS as a source for authentication information.
+You can configure {PlatformNameShort} to centrally use RADIUS as a source for authentication information.
 
 .Procedure
 
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *RADIUS settings* from the list of *Authentication* options.
-. Click btn:[Edit] and enter the host or IP of the RADIUS server in the *RADIUS Server* field.
-If you leave this field blank, RADIUS authentication is disabled.
-. Enter the port and secret information in the next two fields.
-. Click btn:[Save].
+. From the navigation panel, select {MenuAMAuthentication}.
+. Select *Radius* from the *Authentication type* list.
+. Click btn:[Create authentication].
+. Enter the host or IP of the RADIUS server in the *RADIUS Server* field. If you leave this field blank, RADIUS authentication is disabled.
+. Enter the *Shared secret for authenticating to RADIUS server*.
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc
+. Click btn:[Next].
+
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc
