--- a/downstream/modules/platform/proc-controller-set-up-tacacs+.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-tacacs+.adoc
@@ -1,9 +1,8 @@
 [id="controller-set-up-tacacs"]
 
-= TACACS Plus authentication
+= Configuring TACACS+ authentication
 
-Terminal Access Controller Access-Control System Plus (TACACS+) is a protocol that handles remote authentication and related services for networked access control through a centralized server.
-TACACS+ provides authentication, authorization and accounting (AAA) services, in which you can configure {ControllerName} to use as a source for authentication.
+Terminal Access Controller Access-Control System Plus (TACACS+) is a protocol that handles remote authentication and related services for networked access control through a centralized server. TACACS+ provides authentication, authorization and accounting (AAA) services, in which you can configure Ansible Automation Platform to use as a source for authentication.
 
 [NOTE]
 ====
@@ -11,15 +10,24 @@ This feature is deprecated and will be removed in a future release.
 ====
 
 .Procedure
-. From the navigation panel, select {MenuAEAdminSettings}.
-. Select *TACACs+ settings* from the list of *Authentication* options.
-. Click btn:[Edit] and enter the following information:
-* *TACACS+ Server*: Provide the hostname or IP address of the TACACS+ server with which to authenticate.
-If you leave this field blank, TACACS+ authentication is disabled.
-* *TACACS+ Port*: TACACS+ uses port 49 by default, which is already pre-populated.
-* *TACACS+ Secret*: The secret key for TACACS+ authentication server.
-* *TACACS+ Auth Session Timeout*: The session timeout value in seconds.
-The default is 5 seconds.
-* *TACACS+ Authentication Protocol*: The protocol used by the TACACS+ client.
-The options are *ascii* or *pap*.
-. Click btn:[Save].
+
+. From the navigation panel, select {MenuAMAuthentication}.
+. Click btn:[Create authentication].
+. Select *TACACS+* from the *Authentication type* list.
+. Click btn:[Next].
+. Enter a *Name* for this TACACS+ configuration.
+. Enter the following information:
++
+* Hostname of TACACS+ Server: Provide the hostname or IP address of the TACACS+ server with which to authenticate. If you leave this field blank, TACACS+ authentication is disabled.
+* TACACS+ Authentication Protocol: The protocol used by the TACACS+ client. The options are ascii or pap.
+*Shared secret for authenticating to TACACS+ server: The secret key for TACACS+ authentication server.
++
+. The *TACACS+ client address sending enabled* is disabled by default. To enable client address sending, select the checkbox.
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc
+Click btn:[Next].
+
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc
