--- a/downstream/modules/platform/proc-controller-github-enterprise-org-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-enterprise-org-settings.adoc
@@ -4,36 +4,31 @@
 
 To set up social authentication for a GitHub Enterprise Organization, you must obtain a GitHub Enterprise Organization URL, an Organization API URL, an Organization OAuth2 key and secret for a web application.
 
-To obtain the URLs, refer to the GitHub documentation on link:https://docs.github.com/en/enterprise-server@3.1/rest/reference/enterprise-admin[GitHub Enterprise administration].
+To obtain the URLs, refer to the link:https://docs.github.com/en/enterprise-server@3.1/rest/reference/enterprise-admin[GitHub Enterprise administration documentation].
 
-To obtain the key and secret, you must first register your enterprise organization-owned application at `https://github.com/organizations/<yourorg>/settings/applications`
+The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI. To register the application, you must supply it with your webpage URL, which is the *Callback URL* shown in the Authenticator details for your authenticator configuration. See xref:gw-display-auth-details[Displaying authenticator details] for instructions on accessing this information.
 
-To register the application, you must supply it with your Authorization callback URL, which is the *Callback URL* shown in the *Details* page.
-
-Because it is hosted on site and not `github.com`, you must specify which authentication adapter it communicates with.
-
-Each key and secret must belong to a unique application and cannot be shared or reused between different authentication backends.
-The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
+Each key and secret must belong to a unique application and cannot be shared or reused between different authentication backends. The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
 
 .Procedure
-. From the navigation panel, select {MenuAEAdminSettings}.
-. On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
-. Click the *GitHub Enterprise Organization* tab.
+. From the navigation panel, select {MenuAMAuthentication}.
+. Select *GitHub enterprise organization* from the *Authentication type* list.
+. Enter a *Name* for this authentication configuration.
+. When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
-The *GitHub Enterprise Organization OAuth2 Callback URL* field is already pre-populated and non-editable.
-When the application is registered, GitHub displays the Client ID and Client Secret.
+.. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
+.. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
+. In the *Base URL* field, enter the hostname of the GitHub Enterprise instance, for example, `https://github.example.com`.
+. In the *Github OAuth2 Enterprise API URL* field, enter the API URL of the GitHub Enterprise instance, for example, `https://github.example.com/api/v3`.
+.Enter the name of your GitHub Enterprise organization, as used in your organization’s URL, for example, `https://github.com/<yourorg>/` in the *GitHub OAuth2 Enterprise Org Name* field.
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc
+. Click btn:[Next].
 
-. Click btn:[Edit] to configure GitHub Enterprise Organization settings.
-. In the *GitHub Enterprise Organization URL* field, enter the hostname of the GitHub Enterprise Organization instance, for example, https://github.orgexample.com.
-. In the *GitHub Enterprise Organization API URL* field, enter the API URL of the GitHub Enterprise Organization instance, for example, https://github.orgexample.com/api/v3.
-. Copy and paste GitHub's Client ID into the *GitHub Enterprise Organization OAuth2 Key* field.
-. Copy and paste GitHub's Client Secret into the *GitHub Enterprise Organization OAuth2 Secret* field.
-. Enter the name of your GitHub Enterprise organization, as used in your organization's URL, for example, https://github.com/<yourorg>/ in the *GitHub Enterprise Organization Name* field.
-. For more information on completing the mapping fields, see xref:ref-controller-organization-mapping[Organization mapping] and xref:ref-controller-team-mapping[Team mapping].
-. Click btn:[Save].
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc
 
-.Verification
-To verify that the authentication was configured correctly, logout of {ControllerName}.
-The login screen displays the GitHub Enterprise Organization logo to enable logging in with those credentials.
-
-image:configure-controller-auth-github-ent-org-logo.png[image]
+include::snippets/snip-gw-authentication-verification.adoc
