--- a/downstream/modules/platform/proc-controller-github-team-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-team-settings.adoc
@@ -1,32 +1,32 @@
 [id="proc-controller-github-team-settings"]
 
-= GitHub Team settings
+= Configuring GitHub team authentication
 
-To set up social authentication for a GitHub Team, you must obtain an OAuth2 key and secret for a web application.
-To do this, you must first register your team-owned application at `https://github.com/organizations/<yourorg>/settings/applications`.
-To register the application, you must supply it with your Authorization callback URL, which is the *Callback URL* shown in the *Details* page.
-Each key and secret must belong to a unique application and cannot be shared or reused between different authentication
-backends.
-The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
+To set up social authentication for a GitHub team, you must obtain an OAuth2 key and secret for a web application using the instructions provided in link:https://docs.github.com/en/apps/using-github-apps/installing-your-own-github-app[registering the new application with GitHub].
+
+The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI. To register the application, you must supply it with your webpage URL, which is the *Callback URL* shown in the Authenticator details for your authenticator configuration. See xref:gw-display-auth-details[Displaying authenticator details] for instructions on accessing this information.
+
+Each key and secret must belong to a unique application and cannot be shared or reused between different authentication backends. The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
 
 .Procedure
-. Find the numeric team ID using the link:https://fabian-kostadinov.github.io/2015/01/16/how-to-find-a-github-team-id/[GitHub API].
-The Team ID is used to supply a required field in the UI.
-. From the navigation panel, select {MenuAEAdminSettings}.
-. On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
-. Click the *GitHub Team* tab.
+
+. From the navigation panel, select {MenuAMAuthentication}.
+. Select *GitHub team* from the *Authentication type* list.
+. Enter a *Name* for this authentication configuration.
+. When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
 +
-The *GitHub Team OAuth2 Callback URL* field is already pre-populated and non-editable.
-When the application is registered, GitHub displays the Client ID and Client Secret.
+.. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
+.. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
+. Copy and paste GitHub’s team ID in the *GitHub OAuth2 Team ID* field.
+. Enter the authorization scope for users in the GitHub OAuth2 Scope field. The default is `read:org`. 
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc
+. Click btn:[Next].
 
-. Click btn:[Edit] and copy and paste GitHub's Client ID into the *GitHub Team OAuth2 Key* field.
-. Copy and paste GitHub's Client Secret into the *GitHub Team OAuth2 Secret* field.
-. Copy and paste GitHub's team ID in the *GitHub Team ID* field.
-. For more information on completing the mapping fields, see xref:ref-controller-organization-mapping[Organization mapping] and xref:ref-controller-team-mapping[Team mapping].
-. Click btn:[Save]
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc
 
-.Verification
-To verify that the authentication was configured correctly, logout of {ControllerName}.
-The login screen displays the GitHub Team logo to enable logging in with those credentials.
-
-image:configure-controller-auth-github-teams-logo.png[image]
+include::snippets/snip-gw-authentication-verification.adoc
