--- a/downstream/modules/platform/proc-controller-google-oauth2-settings.adoc
+++ b/downstream/modules/platform/proc-controller-google-oauth2-settings.adoc
@@ -1,36 +1,42 @@
 [id="proc-controller-google-oauth2-settings"]
 
-= Google OAuth2 settings
+= Configuring Google OAuth2 authentication
 
-To set up social authentication for Google, you must obtain an OAuth2 key and secret for a web application.
-To do this, you must first create a project and set it up with Google.
+To set up social authentication for Google, you must obtain an OAuth2 key and secret for a web application. To do this, you must first create a project and set it up with Google.
 
 For instructions, see link:https://support.google.com/googleapi/answer/6158849[Setting up OAuth 2.0] in the Google API Console Help documentation.
 
-If you have already completed the setup process, you can access those credentials by going to the Credentials section of the
-link:https://console.developers.google.com/[Google API Manager Console].
-The OAuth2 key (Client ID) and secret (Client secret) are used to supply the required fields in the UI.
+If you have already completed the setup process, you can access those credentials by going to the Credentials section of the link:https://console.cloud.google.com/projectselector2/apis/dashboard?pli=1&supportedpurview=project[Google API Manager Console]. The OAuth2 key (Client ID) and secret (Client secret) are used to supply the required fields in the UI.
 
 .Procedure
-. From the navigation panel, select {MenuAEAdminSettings}.
-. On the *Settings* page, select *Google OAuth 2 settings* from the list of *Authentication* options.
+
+. From the navigation panel, select {MenuAMAuthentication}.
+. Click btn:[Create authentication].
+. Select *Google OAuth* from the *Authentication type* list.
+. Enter a *Name* for this authentication setting.
+. The *Google OAuth2 Key* and *Google OAuth2 Secret* fields are pre-populated. 
 +
-The *Google OAuth2 Callback URL* field is already pre-populated and non-editable.
-
-. The following fields are also pre-populated.
-If not, use the credentials Google supplied during the web application setup process, and look for the values with the same format as the ones shown in the example below:
-
-* Click *Edit* and copy and paste Google's Client ID into the *Google OAuth2 Key* field.
-* Copy and paste Google's Client secret into the *Google OAuth2 Secret* field.
+If not, use the credentials Google supplied during the web application setup process. Save these settings for use in the following steps.
 +
-image:configure-controller-auth-google.png[image]
+. Copy and paste Google’s Client ID into the *Google OAuth2 Key* field.
+. Copy and paste Google’s Client secret into the *Google OAuth2 Secret* field. 
+. Optional: Enter information for the following fields using the tooltips provided for instructions and required format:
++
+* *Access Token URL*
+* *Access Token Method*
+* *Authorization URL*
+* *Revoke Token Method*
+* *Revoke Token URL*
+* *OIDC JWT Algorithm(s)*
+* *OIDC JWT*
++
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc
+Click btn:[Next].
 
-. To complete the remaining optional fields, refer to the tooltips in each of the fields for instructions and required format.
-. For more information on completing the mapping fields, see xref:ref-controller-organization-mapping[Organization mapping] and xref:ref-controller-team-mapping[Team mapping].
-. Click btn:[Save].
+[role="_additional-resources"]
+.Next steps
+include::snippets/snip-gw-authentication-next-steps.adoc
 
-.Verification
-To verify that the authentication was configured correctly, logout of {ControllerName}.
-The login screen displays the Google logo to indicate it as an alternate method of logging into {ControllerName}.
-
-image:configure-controller-auth-google-logo.png[image]
+include::snippets/snip-gw-authentication-verification.adoc
