Resolved merge conflict

--- a/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
+++ b/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
@@ -55,7 +55,7 @@ Perform the following tasks to install and configure a {LightspeedshortName} on-
 
 . xref:create-connection-secrets_configuring-lightspeed-onpremise[Create connections secrets for {PlatformName} and {ibmwatsonxcodeassistant} both]
 
-. xref:create-lightspeed-instance_configuring-lightspeed-onpremise[Create and deploy an {LightspeedshortName} instance]
+. xref:create-lightspeed-instance_configuring-lightspeed-onpremise[Create and deploy a {LightspeedshortName} instance]
 
 . xref:update-redirect-uri_configuring-lightspeed-onpremise[Update the Redirect URI to connect to your {LightspeedshortName} on-premise deployment]
 
