--- a/lightspeed/modules/con_wca-key-model-id.adoc
+++ b/lightspeed/modules/con_wca-key-model-id.adoc
@@ -10,7 +10,7 @@
 To use the {LightspeedShortName} cloud service, you must meet *one* of the following requirements:
 
 ** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
-** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
 +
 [NOTE]
 ====
