--- a/lightspeed/modules/proc_create-connection-secrets.adoc
+++ b/lightspeed/modules/proc_create-connection-secrets.adoc
@@ -92,7 +92,7 @@ Ensure that you do not accidentally add any whitespace characters (extra line, s
 
 .. Click *Create*. 
 
-After you create the authorization and model secrets, you must select the secrets when you  xref:create-lightspeed-instance_configuring-lightspeed-onpremise[create and deploy an {LightspeedshortName} instance].
+After you create the authorization and model secrets, you must select the secrets when you  xref:create-lightspeed-instance_configuring-lightspeed-onpremise[create and deploy a {LightspeedshortName} instance].
 
 == Creating a bundle secret to trust a custom Certificate Authority
 
