--- a/lightspeed/modules/proc_generate-playbook.adoc
+++ b/lightspeed/modules/proc_generate-playbook.adoc
@@ -11,7 +11,7 @@ You can use the natural language interface in the Ansible VS Code extension to g
 * You meet *one* of the following requirements:
 
 ** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
-** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
 
 * You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
