--- a/lightspeed/modules/proc_multi-task-recs.adoc
+++ b/lightspeed/modules/proc_multi-task-recs.adoc
@@ -12,7 +12,7 @@ For example, to automate a multitask of installing PostgreSQL server and running
 * You meet *one* of the following requirements:
 
 ** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
-** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
 
 * You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
