--- a/lightspeed/modules/proc_provide-feedback.adoc
+++ b/lightspeed/modules/proc_provide-feedback.adoc
@@ -21,7 +21,7 @@ NOTE: On the login screen of the link:https://c.ai.ansible.redhat.com/[Ansible L
 Ensure that you meet *one* of the following requirements:
 
 * Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
-* Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+* Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
 
 .Procedure
 
