--- a/lightspeed/modules/proc_single-task-recs.adoc
+++ b/lightspeed/modules/proc_single-task-recs.adoc
@@ -11,7 +11,7 @@ You can request code recommendations for a single task by entering natural langu
 * You meet *one* of the following requirements:
 
 ** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
-** Your organization has a trial or paid subscription to the {PlatformName}, and you have an {LightspeedShortName} trial account.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
 
 * You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
@@ -26,7 +26,7 @@ You can request code recommendations for a single task by entering natural langu
 * Use an existing YAML file: 
 ... On the bottom right of the screen, click the existing language mode, and in the language mode settings, select *Ansible*. 
 +
-NOTE: If you do not see the language mode section in your VS Code editor, from the Command Palette, select menu:Configure Langauge Mode[Ansible].
+NOTE: If you do not see the language mode section in your VS Code editor, from the Command Palette, select menu:Configure Language Mode[Ansible].
 +
 . Verify that you see an entry for *Lightspeed* on the status bar at the lower right of VS Code.
 +
