--- a/lightspeed/modules/proc_troubleshooting-lightspeed-onpremise-config.adoc
+++ b/lightspeed/modules/proc_troubleshooting-lightspeed-onpremise-config.adoc
@@ -4,7 +4,7 @@
 = Troubleshooting {LightspeedShortName} on-premise deployment errors
 
 == Cannot log in to the Ansible Lightspeed portal
-After you configure an {LightspeedShortName} on-premise deployment and try to log in to the Ansible Lightspeed portal, the log-in attempt fails. The following scenarios are possible:
+After you configure a {LightspeedShortName} on-premise deployment and try to log in to the Ansible Lightspeed portal, the log-in attempt fails. The following scenarios are possible:
 
 * The log-in attempt fails with the following error message:
 +
