AAP-25515 Added new content for RH AAP credential type

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -2,31 +2,36 @@
 
 = Setting up a {PlatformName} credential
 
-To run your rulebook activations successfully, you must connect {MenuAD} to {enuTopAE}. You can do this by adding a {Red Hat Ansible Automation Platform} credential.
+To run your rulebook activations successfully, you must create credentials with the {Red Hat Ansible Automation Platform} credential type. Using this credential type provides more seamless authentication without the requirement to create a token.
 
 .Prerequisites
 
-* You are logged in to the {PlatformName} Dashboard as a Content Consumer.
 * You have created a user.
 
 .Procedure
 
-. Go to the {EDAcontroller} Dashboard.
-. From the top navigation panel, select your profile.
-. Go to *User details*.
+. Log in to the {PlatformName} Dashboard.
+. From the navigation panel, select {MenuADCredentials}.
+. Go to *Create Credentials*.
 //[ddacosta] I don't see Controller Tokens in the test environment, need to verify where this lives and whether it changes in 2.5
-. Select menu:Controller Tokens[Create controller token].
 . Insert the following:
 +
 Name:: Insert the name.
 Description:: This field is optional.
-Token:: Create the token in {ControllerName}.
-For more information about creating the token, see the link:https://docs.ansible.com/automation-controller/latest/html/userguide/users.html#users-tokens[Users - Tokens] section of the {ControllerUG}.
+Organization:: Click the list to select an organization or select *Default*.
+Credential type:: Click the list and select {PlatformName}. 
 +
 [NOTE]
 ====
-The token must be in write-scope.
+When you select the credential type, the *Type Details* is displayed with fields that are applicable for the credential type you chose.   
 ====
-. Select btn:[Create controller token].
+. In the required {PlatformName} field, enter your automation controller URL (for example, https://<<myaap.redhat.com>>api/controller/ ).
+//[JMS]Confirm that a valid password is not required. The daily build at https://ci-gw-20240816.gcp.testing.ansible.com/ no longer shows a required password.
+. Click btn:[Create controller token].
 
-After saving the new token, you are brought to the *Controller Tokens* tab where you can delete the token.
+After saving the credential, the credentials Details page is displayed. From there or the Credentials list view, you can edit or delete it.
++
+[NOTE]
+====
+After you have selected and saved your credential type, it cannot be changed.
+====
